# moxify_ocr_model

./: .gitignore  Makefile  README.md  ocr_training_doc.md  pyproject.toml
configs/: bottom_region_v1.yaml  bottom_region_v3.yaml  name_v1.yaml  name_v15.yaml
docs/: colab_quickstart.md
docs/plans/: 2026-04-23-bottom-region-extractor-design.md  2026-04-23-bottom-region-extractor-plan.md  2026-04-24-v2-plan.md  2026-04-26-cardconjurer-synthetic-renderer.md  2026-04-26-v3-synthetic-only-training.md  2026-04-27-card-name-ocr-design.md
infra/cardconjurer/: README.md  start.sh  stop.sh
notebooks/: train_name_v1_kaggle.ipynb
scripts/: _build_aug_sample.py  _build_name_contact_sheet.py  _build_smoke_contact_sheet.py  _build_spike_contact_sheet.py  _export_op_version_sweep.py  audit_manifest.py  dump_sample_crops.py  export_bottom_tflite.py  export_name_tflite.py  ingest_audit.py  ingest_scryfall.py  package_for_kaggle.sh  predict_bottom.py  render_cardconjurer_pool.py  render_name_pool.py  score_name_crops.py  spike_cardconjurer.py  test_model.py  test_model_multilang.py  train_name_v1.py
tests/: test_package.py
tests/data/: conftest.py  test_augment.py  test_cardconjurer_dataset.py  test_cardconjurer_specs.py  test_crop.py  test_dataset.py  test_label_roundtrip.py  test_labels_helpers.py  test_line_compositor.py  test_make_label.py  test_manifest.py  test_name_alphabet.py  test_name_augment.py  test_name_dataset.py  test_name_specs.py  test_scryfall_bulk.py  test_scryfall_images.py  test_splits.py  test_symbol_overlay.py  test_synthetic.py
(+34 files in other folders)
